--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= "This is interesting as hell!!"
+  h1= "This is interesting as hell!!!!!"
   p Welcome to #{title}
