--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= "This is interesting as hell!!!!! Testing now"
+  h1= "This is interesting as hell!!!!! Testing now 1"
   p Welcome to #{title}
