Updating content with oryx build

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= "This is interesting as hell!!!!! Testing now 2"
+  h1= "This is interesting as hell!!!!! new test branch"
   p Welcome to #{title}
